--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   ],
   "require": {
     "php": ">=8.0",
-    "guzzlehttp/guzzle": "^7.8"
+    "guzzlehttp/guzzle": "^7.8",
+    "phpseclib/phpseclib": "^3.0"
   },
   "autoload": {
     "psr-4": {
