--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "ged/api-client",
+  "version": "1.0.1",
   "description": "Cliente oficial PHP da GED API — Assinatura Digital ICP-Brasil",
   "type": "library",
   "license": "MIT",
